make sure feature paragraph link covers all the content, so that it triggers the pointer cursor

--- a/resources/gato-component-feature/css/feature.scss
+++ b/resources/gato-component-feature/css/feature.scss
@@ -11,6 +11,7 @@
       padding: 0;
       margin: 0;
       text-decoration: none;
+      overflow: hidden;
       @include vendor-prefix(transition, opacity 0.3s ease-out);
       &:hover {
         opacity: 1;
